==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.3.1 Dec 28 2014
. (kfsone) Removed '--supply' from "update" completely,
. (kfsone) Improved the "--ls-penalty" from a flat line to a curve,
   so really, stupidly, ridiculously distant stations (looking at you,
   Alpha centauri) really have to be mind-blowing to show up.
. (kfsone) "run" command output shows score of routes,
. (kfsone) "misc/add-station" now has a "-u" option for updates,
. (kfsone) "misc/add-station" no-longer writes to the csv file
   (after adding stations do: trade.py export --table Station)
. (kfsone) Fixed #111 import not rebuilding cache
. (kfsone) "maddavo" plugin is now much smarter
   - will try to download a smaller prices file,
   - will check the first line of the file to see if it's an update
     before downloading the whole thing :)
. (kfsone) You can now use "--opt=help" to get help for plugins, e.g.
   trade.py import --plugin=maddavo --opt=help
. (kfsone) Added "--ls-penalty" ("--lsp") for biasing "run" calculations
   in favor of shorter supercruise times.
+ Stations, Systems, data: kfsone, maddavo, gazelle, shirkan

v6.3.0 Dec 23 2014
. (OpenSS) Script for Windows users (see scripts/README.txt)!
. (kfsone) Added support for pad sizes at stations,
. (kfsone) Revamped output from "local", "buy", "sell" and "olddata".
    - "--ages" is the default now (so the option is not needed),
    - Added pad size display,
    - Improved black market display,
    - Changed '+' to '/' for consistency on station lines,
. (bgol) Fixed weirdness with rangeCache
. (bgol/kfsone) Fixed jump distances and performance of "nav" command
+ Stations, Data: kfsone

v6.2.4 Dec 21 2014
. (kfsone) Experimental "add-station" command in misc,
. (kfsone) Added "--near" to olddata command,
. (kfsone) Route calculation performance,