@@ -2040,7 +2040,7 @@ unq:name@System.system_id,unq:name,ls_from_star,blackmarket,max_pad_size
 'V775 Herculi','Beatty Port',87000,'N','?'
 'V775 Herculi','Vlamingh Hub',87120,'?','?'
 'V775 Herculi','Vonarburg Enterprise',2396,'?','?'
-'V816 Herculis','Hobaugh Hanger',1060,'?','?'
+'V816 Herculis','Hobaugh Hanger',1060,'N','M'
 'V816 Herculis','Willis Installation',1020,'?','?'
 'V886 Centauri','Garriott Terminal',775,'N','M'
 'V886 Centauri','Tanner City',953,'Y','L'
